--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.app-container {
+  display: flex;
+}
+
+.app-main {
+  width: 80%;
+  height: 100vh;
+}
+
+.app-panel {
+  width: 20%;
+  background-color: #fff;
+  box-shadow: 4px 0 20px #000;
+  height: 100vh;
+}
